--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="card">
                   <h4 class="card-block">Anum Anwer</h4>
                     <p class="card-text"> LSE MSc. Marketing </p>
-                    <img class=profile-image src=../image/anumanwer.jpg width=10%>
+                    <img class=profile-image src="../image/anumanwer.jpg" width=10%>
                         </div>
 
               <div class="card">
